<?xml version="1.0"?>
<package>
  <name>selected_pointcloud_publish_plugin</name>
  <version>1.0.0</version>
  <description>The selected_pointcloud_publish plugins package</description>
  <maintainer email="bxzhang@gmail.com">baoxianzhang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
